--- a/build.gradle
+++ b/build.gradle
@@ -2,81 +2,41 @@
 
 buildscript {
     ext {
-        kotlinVersion = "1.3.50"
-        androidxAppCompatVersion = "1.1.0"
+        kotlinVersion = "1.4.21"
+        androidxAppCompatVersion = "1.2.0"
         constraintLayoutVersion = "1.1.3"
-        materialVersion = "1.0.0"
-        lifecycleExtensionsVersion = "2.1.0"
+        materialVersion = "1.2.1"
+        swipeRefreshVersion = "1.1.0"
 
-        androidxNavigationVersion = "2.1.0"
+        lifecycleExtensionsVersion = "2.2.0"
 
-        // rxAndroid & rxKotlin
-        rxKotlinVersion = "2.4.0"
-        rxAndroidVersion = "2.1.1"
+        androidxNavigationVersion = "2.3.2"
+
+        // Coroutines
+        coroutinesVersion = "1.3.7"
 
         // Room
-        roomVersion = "2.2.0"
+        roomVersion = "2.2.5"
 
         // Retrofit
-        retrofitVersion = "2.6.2"
+        retrofitVersion = "2.9.0"
 
         // External Utils
-        threetenabpVersion = "1.2.1"
+        threetenabpVersion = "1.2.4"
 
         // Testing
-        junitVersion = "4.12"
-        testJunitExtVersion = "1.1.1"
-        testRunnerVersion = "1.2.0"
-        testEspressoVersion = "3.2.0"
-        mockitoKotlinVersion = "2.2.0"
-        mockitoInlineVersion = "2.13.0"
+        junitVersion = "4.13.1"
+        testJunitExtVersion = "1.1.2"
+        testRunnerVersion = "1.3.0"
+        testEspressoVersion = "3.3.0"
         archCoreTestingVersion = "2.1.0"
 
+        // Mockito
+        mockitoKotlinVersion = "2.2.0"
+        mockitoInlineVersion = "3.5.13"
+
         // LeakCanary
-        leakCanaryVersion = "2.0-beta-3"
-
-
-        libs = [
-                kotlin: ("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"),
-                androidxAppCompat: ("androidx.appcompat:appcompat:$androidxAppCompatVersion"),
-                constraintLayout: ("androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"),
-                material: ("com.google.android.material:material:$materialVersion"),
-
-                // ViewModel & LiveData
-                lifecycleExtensions: ("android.arch.lifecycle:extensions:$lifecycleExtensionsVersion"),
-
-                // Navigation
-                androidxNavigation: ("androidx.navigation:navigation-fragment-ktx:$androidxNavigationVersion"),
-                androidxNavigationUi: ("androidx.navigation:navigation-ui-ktx:$androidxNavigationVersion"),
-
-                rxKotlin: ("io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"),
-                rxAndroid: ("io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"),
-
-                roomCompiler: ("androidx.room:room-compiler:$roomVersion"),
-                roomRuntime: ("androidx.room:room-runtime:$roomVersion"),
-                roomRxJava: ("androidx.room:room-rxjava2:$roomVersion"),
-                roomTesting: ("androidx.room:room-testing:$roomVersion"),
-
-                retrofit: ("com.squareup.retrofit2:retrofit:$retrofitVersion"),
-                retrofitRxJava: ("com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"),
-                retrofitMoshi: ("com.squareup.retrofit2:converter-moshi:$retrofitVersion"),
-
-                threetenabp: ("com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"),
-
-                junit: ("junit:junit:$junitVersion"),
-                testJunitExt: ("androidx.test.ext:junit:$testJunitExtVersion"),
-                testRunner: ("androidx.test:runner:$testRunnerVersion"),
-                testEspresso: ("androidx.test.espresso:espresso-core:$testEspressoVersion"),
-                testEspressoContrib: ("androidx.test.espresso:espresso-contrib:$testEspressoVersion"),
-                testRules: ("androidx.test:rules:$testRunnerVersion"),
-                testOrchestrator: ("androidx.test:orchestrator:$testRunnerVersion"),
-                archCoreTesting: ("androidx.arch.core:core-testing:$archCoreTestingVersion"),
-
-                mockitoKotlin: ("com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"),
-                mockitoInline: ("org.mockito:mockito-inline:$mockitoInlineVersion"),
-
-                leakCanary: ("com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion")
-        ]
+        leakCanaryVersion = "2.5"
     }
 
     repositories {
@@ -85,8 +45,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$androidxNavigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -101,9 +62,17 @@ allprojects {
 
     ext {
         minSdkVersion = 21
-        targetSdkVersion = 28
-        compiledSdkVersion = 28
+        targetSdkVersion = 30
+        compiledSdkVersion = 30
         var = compiledSdkVersion
+    }
+
+    // Remove experimental coroutines warnings
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions.freeCompilerArgs += [
+                "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi",
+                "-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi"
+        ]
     }
 }
 
